--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "material-ui-popup-state": "^5.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
