--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "material-ui-popup-state": "^5.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
